# TaskGui

./: .gitignore  README.md  Taskfile.yml  config.yaml  demo.py  main.py  pyproject.toml  requirements.txt  run.bat  run_task_manager.bat  task_gui_min.py  task_parser_min.py
docs/: streamlit_commands.md
resources/styles/: dark_theme.qss
src/: app.py
src/components/: preview_card.py  sidebar.py
src/core/: command_generator.py  parser.py
src/gui/: command_preview.py  main_window.py  task_block.py  task_container.py
src/models/: task_model.py
src/services/: dataframe.py  taskfile.py
src/taskst/: app.py  cli.py
src/utils/: __init__.py  config_manager.py  file_watcher.py  selection_utils.py  taskfile_manager.py
task_st/: .gitignore  README.md  Taskfile.yml  config.yaml  demo_card.py  exit.py  main.py  pyproject.toml  requirements.txt  restore_repository.py  run.sh  run_task_manager.py  task_runner.py  task_state.yaml  taskfile.py  utils.py
task_st/.demo/: demo_card.py  demo_tags.py
task_st/.streamlit/: config.toml
task_st/config/: basic_settings.json
task_st/src/: __init__.py  app.py  common.py  group_view.py  run_task_manager.py  table_view.py  task_runner.py  taskfile.py  utils.py  views.py
taskfile_qt/: README.md  main.py
taskgui/: app.py  cli.py
taskgui/components/: batch_operations.py  preview_card.py  sidebar.py  tag_filters.py  taskfile_manager_ui.py
taskgui/config/: __init__.py  config.yaml  config_manager.py  taskfile_manager.py
taskgui/core/: cli.py  main.py
taskgui/manage/: selected_tasks_view.py  state_manager.py
(+139 files in other folders)
